      be guards based not on their MTBF or their uptime, but on their
      fractional uptime: the fraction of the time that they are online.
    - Clients new hold circuitless TLS connections open for 1.5 times
      MaxCircuitDirtiness, since it is likely that they'll need to build
      a circuit over them within that timeframe.  Previously, they held them
      open only for KeepalivePeriod.

  o Minor bugfixes:
    - Refuse to start if both ORPort and UseBridges are set. Bugfix
      on 0.2.0.x.
    - Better log message on vote from unknown authority.

  o Minor bugfixes (memory leaks):
    - Stop leaking memory every time we parse a v3 certificate. Bugfix
      on 0.2.0.1-alpha.
    - Stop leaking memory every time we load a v3 certificate. Bugfix
      on 0.2.0.1-alpha.  Fixes Bug 536
    - Stop leaking a cached networkstatus on exit.  Bugfix on
      0.2.0.3-alpha.
    - Stop leaking voter information every time we free a consensus.  Bugfix
      on 0.2.0.3-alpha.
    - Stop leaking signed data every time we check a voter signature.
      Bugfix on 0.2.0.3-alpha.
    - Stop leaking a signature every time we fail to parse a consensus or
      a vote.  Bugfix on 0.2.0.3-alpha.
    - Stop leaking v2_download_status_map on shutdown.  Bugfix on
      0.2.0.9-alpha.


Changes in version 0.2.0.9-alpha - 2007-10-24
  This ninth development snapshot switches clients to the new v3 directory
  system; allows servers to be listed in the network status even when they
  have the same nickname as a registered server; and fixes many other
  bugs including a big one that was causing some servers to disappear
  from the network status lists for a few hours each day.

  o Major features (directory system):
    - Clients now download v3 consensus networkstatus documents instead
      of v2 networkstatus documents. Clients and caches now base their
      opinions about routers on these consensus documents. Clients only
      download router descriptors listed in the consensus.